# Spider

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  aibase_ai_summary.md  config.py  env.example  pyproject.toml  settings.toml  tsconfig.json
Bing/: index.py
FaceBook/: FacebookUserInfo.py  getShopInfo.py  shop_analysis_result.json
FakerAd/: address.py
Google/: GoogleSearch.py
Tools/: csv_format.py
Weather/: main.js  main.py  merge.py
YRX/Session1/match1/: main.py  md5.js
YRX/Session1/match12/: main.py
YRX/Session1/match13/: main.py
YRX/Session1/match15/: main.py
YRX/Session1/match16/: btoa.js  main.py
ai_morning_post_generation/: ai_morning_brief.py
e_to_china/: json2jsonl.py  main.py
gitea/: mian.py  user_commits.py
hacknews/: main.py
ipzan/: get_proxy.py
java实训/: sign.py
utils/: get_ip.py
专升本/智博/: main.py
今日校园/: get_students_list.py  get_teacher_list.py  sign.py
学习通/: ALL.py  login.py
宿舍电费/: main.py
微博/: ceshi.py  getusercomment.py  jieba.py  weibo.py
懂车帝/: Json2CSV.py  car_data.json  get_all_car_data.py  get_city_all_car_data.py  main.py
教务系统/: RSAJS.py  login.py  normalization.py
校友邦/: main.py
校园网/: CampusNetworkBlasting.py  admin.py  bmc.py  security.js  userInfo.py
爱奇艺/: rank.py
猫眼/: 1.json  data.xlsx  main.py  maoyan_new.xml  raw_data_json.json
统一认证/: login.py
网易云/: reverse.js
网易云/下载/: download.py
网易云/排行榜/: main.py
网易云/歌词/: wangyiyun_words.py
网易云/评论/: 1.json  main.py
网易云/音乐人/: getInfo.py
网站关于/: mian.py
艺恩/: analyze.py  main.py  main_get.py
豆瓣/: main.py
(+4 files in other folders)
