[project]
name = "spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "crawl4ai>=0.7.4",
    "fake-useragent>=2.2.0",
    "googlesearch-python>=1.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.68.2",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
]
